mui, new components

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@ body {
     background-color: rgb(209, 200, 209);
 }
 
-/* .App {
+.App {
     padding: 4rem;
-} */
+}
 
 .App-logo {
     height: 40vmin;
